   - iometer-2003.12.16-IoMtrGlobalDefines5.patch by Daniel Scheibli
     (introduces the IOMTR_SETTING_* global defines to include additional
     code like the VI stuff).
   - iometer-2003.12.16-SwitchesNowRequired.patch by Daniel Scheibli
     (code cleanup of the dynamo parameter handling; switches are no
     longer option but required now)
- Documentation:
   - Added first comments about the coding style to the Developers Guide.
- Others:
   - Added md5sum's for each package to the project homepage.
   - Extended the build environment with capabilities to handle Java.



ChangeLog (2003.12.16):
=======================

- Applied patches:
   - iometer-2003.05.10-IoMtrGlobalDefines4.patch by Daniel Scheibli
     (Last of the IOMTR_* global defines patches)
   - iometer_large_work_file.patch.txt by Russell Redd (fixes the GUI 
     to ensure that "Maximum Disk Size" values are handled propably)
   - iometer-2003.05.10-IoMtrGlobalDefines3.patch by Daniel Scheibli
     (introduces the IOMTR_* global defines to consolidate the different
     global defines coming with the different platforms - ease future
     ports).
   - iometer-2003.05.10-Win64OnAmd64.patch by Daniel Scheibli (Integrates
     the changes contributed by Vedran Degoricija to ensure, that the
     executables can be build for Windows 64 Bit on AMD64).
   - Patch provided by Robert H Creecy to fix the segmentation fault which
     happened when running on Solaris while having multiple swap devices
     configured.
   - Patch provided by Sander Pool to get the Iometer "truly batch
     oriented".
   - iometer-2003.05.10-UsingDdkAndWin64.patch by Daniel Scheibli
     (Integrates the changes contributed by Vedran Degoricija to
     ensure, that the executables can be build using the MS DDK
     on i386 and IA64 as well).
   - iometer-2003.05.10-IoMtrGlobalDefines2.patch by Daniel Scheibli
     (introduces the IOMTR_* global defines to consolidate the different